--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.4",
@@ -40,7 +43,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-select": "^3.0.8",
+    "react-select": "^4.3.1",
     "redux": "^4.0.4",
     "redux-chill": "^3.0.3",
     "redux-devtools-extension": "^2.13.8",
